--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "naranjus",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Matias Soto",
+  "author": "Grupo Naranjus",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
