--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-web-cam": "^1.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
