--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "ajv-keywords": "^5.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
