--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "jquery": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.2",
     "vue-web-cam": "^1.9.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
