--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+config/dev.env.js
 
 # Editor directories and files
+
 .idea
 .vscode
 .env
